--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>Wiki Searcher</h1>
+        <h1>Wiki Search</h1>
         <form action="" class="search-box">
           <input type="search" placeholder="Nhập dữ liệu cẩn tìm kiếm ?" />
         </form>
