--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       type="image/png"
     />
     <title>Project#1_Wikipedia API Js</title>
+
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -18,7 +19,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>Wiki Search</h1>
+        <h1>Wiki Search <i class="bx bx-search"></i></h1>
         <form action="" class="search-box">
           <input type="search" placeholder="Nhập dữ liệu cẩn tìm kiếm ?" />
         </form>
