--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <body>
     <div class="container">
       <header>
-        <h1>Wiki Search <i class="bx bx-search"></i></h1>
+        <h1>Mâyy Search <i class="bx bx-search"></i></h1>
         <form action="" class="search-box">
           <input type="search" placeholder="Nhập dữ liệu cẩn tìm kiếm ?" />
         </form>
         <p class="results">Results Count : 0</p>
       </header>
     </div>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
